@@ -39,6 +39,8 @@ Dist::Zilla::PluginBundle::Git = 0
 Dist::Zilla::Plugin::Git = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
 Dist::Zilla::Plugin::AutoMetaResources = 0
+; needed for autodie qw( :system );
+IPC::System::Simple = 0
 
 [@Git]
 allow_dirty = dist.ini
